--- a/templates/depression.html
+++ b/templates/depression.html
@@ -41,7 +41,7 @@
         <h2 >
             Overview
         </h2>
-        <div class="d1">
+        <div className="d1">
             <p>
                 Depression is a mood disorder that causes a persistent feeling of sadness and loss of interest. Also called major depressive disorder or clinical depression, it affects how you feel, think and behave and can lead to a variety of emotional and physical problems. You may have trouble doing normal day-to-day activities, and sometimes you may feel as if life isn't worth living.
             </p>
@@ -63,10 +63,10 @@
                 </li>
             </ul>
         </div>  
-        <img src="./images/how-to-cope-with-anxiety-and-depression-722x406.jpg" height="250" width="450" class="img_depression_page_1">
+        <img src="./images/how-to-cope-with-anxiety-and-depression-722x406.jpg" height="250" width="450" className="img_depression_page_1">
         
         <h2>Symptoms and patterns</h2>
-        <div class="d2">
+        <div className="d2">
             <p>
                 During a depressive episode, the person experiences depressed mood (feeling sad, irritable, empty) or a loss of pleasure or interest in activities, for most of the day, nearly every day, for at least two weeks.<br/><br/> Several other symptoms are also present, which may include poor concentration, feelings of excessive guilt or low self-worth, hopelessness about the future, thoughts about dying or suicide, disrupted sleep, changes in appetite or weight, and feeling especially tired or low in energy. 
                 <br/>
@@ -115,9 +115,9 @@
                 
             </ul>        
         </div>
-        <img src="./images/sad-lonely-woman-in-depression-with-flying-hair.jpeg" height="300" width="400" class="img_depression_page_1">
+        <img src="./images/sad-lonely-woman-in-depression-with-flying-hair.jpeg" height="300" width="400" className="img_depression_page_1">
         <h2>Prevention</h2>
-        <div class="d1">
+        <div className="d1">
             <ul>
                 <li>
                     <b>Take steps to control stress</b>, to increase your resilience and boost your self-esteem.
